crates/plotnik-lib/tests/05-typegen/definitions/error_row_capture_in_recursive_cycle.txt
A = {(expression_statement) (statement_block (B)* @xs)?}
B = {(debugger_statement) (statement_block (A))?}
==== diagnostics ====
error: one repeat of this `*` group doesn't match exactly one node, so there is no single node to bind per element
 --> query.ptk:1:46
  |
1 | A = {(expression_statement) (statement_block (B)* @xs)?}
  |                                              ^^^^
  |
help: add internal captures: `{(a) @a (b) @b}* @items`
